home file modified

--- a/home.html
+++ b/home.html
@@ -17,5 +17,17 @@
             </ul>
         </nav>
     </div>
+
+    <div class="container">
+        <div class="item">item1</div>
+        <div class="item"></div>
+        <div class="item">dsgf</div>
+        <div class="item">fdgfd</div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
 </body>
 </html>
