home file edited product section created

--- a/home.html
+++ b/home.html
@@ -29,5 +29,21 @@
         <div class="item"></div>
         <div class="item"></div>
     </div>
+
+
+    <div class="productLIst">
+        <div class="produtItem">product 1</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+        <div class="produtItem">product new</div>
+    </div>
 </body>
 </html>
