--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Sahil Kumar Makwana</h1>
     Sikandar Ali Page
     <div class="header">
         <nav>
